Updated Travis job and fixed Spotbugs findings in plugin-maven, lang-java-reach, lang-java-reach-soot and lang-python